# Selective-Test-Execution

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
'state/: coverage.json'
.github/workflows/: pages.yml  ste.yml
examples/payments/app/: payments.py  utils.py
examples/payments/tests/: test_payments.py  test_utils.py
src/cli/: ste_cli.py
src/ste/: agent.py  config.py  coverage_map.py  git_diff.py  probe.py  pytest_plugin.py  report.py  runner.py  storage.py
web/: index.html  scripts.js  styles.css
web/data/: latest.json
